Fix header wrapping

--- a/assets/_sass/components/_header.scss
+++ b/assets/_sass/components/_header.scss
@@ -1,8 +1,10 @@
 header.main-header {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     padding: 1em 0;
+    gap: 1em;
 
     ul {
         list-style: none;
